# openni2_ros_wrapper

./: CMakeLists.txt  README.md  package.xml
launch/: structure_sensor.launch
src/: main.cpp
